# comhairle

./: .dockerignore  .gitignore  .nvimrc  .prettierignore  .prettierrc.mjs  Cargo.toml  Dockerfile  LA_Embeds.md  README.md  cargo.toml  code_of_conduct.md  flake.nix  justfile
adaptors/heyform-rust-sdk/: Cargo.toml  README.md  flake.nix
adaptors/heyform-rust-sdk/examples/: basic_usage.rs
adaptors/heyform-rust-sdk/src/: client.rs  error.rs  lib.rs  queries.rs  types.rs
adaptors/heyform-rust-sdk/tests/: integration_tests.rs
adaptors/polis/: Cargo.toml
adaptors/polis/src/: main.rs
adaptors/ragflow/: Cargo.toml  README.md  ragflow-openapi.json
adaptors/ragflow/src/: agent.rs  agents.rs  chat.rs  client.rs  dataset.rs  document.rs  error.rs  lib.rs  types.rs
adaptors/ragflow/src/agent/: mod.rs  session.rs
adaptors/ragflow/src/chat/: mod.rs  session.rs
api/: Cargo.toml  build.rs
api/migrations/: 20250207075808_create_user_table.sql  20250207075817_create_conversation_table.sql  20250207075819_create_workflow_table.sql  20250207075826_create_workflow_step_table.sql  20250319112456_create_user_participation_table.sql  20250319112504_create_user_progress_table.sql  20250327092108_create_user_roles.sql  20250425104041_create_report_table.sql  20250425104548_create_report_impacts_table.sql  20250425132257_create_feedback_table.sql  20250825105532_create_invite_table.sql  20250911201057_create_invite_response_table.sql  20251013160210_create_notifications_table.sql  20251013160244_create_notification_deliveries_table.sql  20251013160300_add_context_to_notifications.sql  20251024140926_add_required_field_to_workflow_step.sql  20251031130805_add_auto_login_to_workflow.sql  20251113121703_add_text_content.sql  20251113121706_add_text_translation.sql  20251115091456_create_user_conversation_preferences_table.sql  20251115093602_backfill_user_conversation_preferences.sql  20251116120000_create_conversation_email_notification_recipients_table.sql  20251117143234_add_email_notification_preferences_to_conversation_email_notification_recipients.sql  20251118073423_add_default_workflow_id_to_conversation.sql  20251118073811_update_existing_conversations_with_default_workflow_id.sql  20251120112610_add_verified_to_comhairle_user_table.sql  20251120154902_add_email_verified_to_comhairle_user_table.sql  20251202145318_add_locale_fields_to_conversation.sql  20251203000001_convert_conversation_to_translatable_fields.sql  20251208000001_convert_workflow_step_to_translatable_fields.sql  20251212161602_ensure_translations_are_deleted_with_text_content.sql  20251216102741_add_chat_bot_knowledge_base_ids_to_conversation.sql  20251218135827_create_bot_service_user_session_table.sql  20260106105145_create_job_table.sql  20260106105145_create_jobs_table.sql  20260121121803_add_workflow_step_id_to_bot_service_user_session.sql  20260122104323_add_live_flag_to_converstation.sql  20260122104655_add_preview_tool_config_to_converastion.sql  20260122163305_backfill_preview_tool_config_from_tool_config.sql  20260129150700_add_context_column_to_bot_service_user_session.sql  (+23 more)
api/src/: auth.rs  bot.rs  bot_service.rs  bulk_storage.rs  config.rs  db.rs  docs.rs  error.rs  lib.rs  mailer.rs  main.rs  models.rs  routes.rs  schema_helpers.rs  test_helpers.rs  tools.rs  transcription_service.rs  translation_service.rs  users.rs  websockets.rs  wiki_poll_service.rs  worker_service.rs  workers.rs
api/src/agent_templates/: ragflow-agent-static-dsl-content.json  ragflow-components.json  ragflow-elicitation-bot.json  ragflow-globals.json  ragflow-path.json  ragflow-retrieval.json
api/src/bot_service/: mod.rs  ragflow_bot.rs
api/src/bulk_storage/: s3_storage.rs
api/src/data_loader/: main.rs
api/src/email_templates/: conversation_invite.html  email_layout.html  password_reset.html  verify_email.html  welcome.html
api/src/middleware/: README.md  rate_limit.rs  rate_limit_tests.rs
api/src/models/: bot_service_user_session.rs  conversation.rs  conversation_email_notification_recipients.rs  event.rs  event_attendance.rs  feedback.rs  invite_response.rs  invites.rs  job.rs  model_test_helpers.rs  notification.rs  notification_delivery.rs  organization.rs  pagination.rs  region.rs  report.rs  report_impact.rs  resource.rs  resource_permission.rs  translations.rs  user_conversation_preferences.rs  user_participation.rs  user_profile.rs  user_progress.rs  users.rs  workflow.rs  workflow_step.rs
api/src/routes/: auth.rs  bot.rs  captcha.rs  chat_sessions.rs  chats.rs  conversations.rs  documents.rs  event_attendances.rs  events.rs  feedback.rs  invites.rs  jobs.rs  notifications.rs  organizations.rs  regions.rs  report_impacts.rs  reports.rs  resources.rs  services.rs  translations.rs  user.rs  user_conversation_preferences.rs  user_participation.rs  user_profile.rs  user_progress.rs  workflow_steps.rs  workflows.rs
api/src/routes/bot/: agent_sessions.rs  agents.rs  chat_sessions.rs  chats.rs  document.rs  documents.rs  knowledge_bases.rs  mod.rs  sessions.rs
api/src/routes/conversations/: dto.rs
api/src/routes/event_attendances/: dto.rs
api/src/routes/events/: dto.rs
api/src/routes/feedback/: dto.rs
api/src/routes/invites/: dto.rs
api/src/routes/notifications/: dto.rs
api/src/routes/organizations/: dto.rs
api/src/routes/regions/: dto.rs
api/src/routes/report_impacts/: dto.rs
api/src/routes/reports/: dto.rs
api/src/routes/translations/: dto.rs
api/src/routes/user/: dto.rs
api/src/routes/user_profile/: dto.rs
api/src/tools/: elicitation_bot.rs  heyform.rs  id.rs  learn.rs  polis.rs  ranking.rs  stories.rs
api/src/transcription_service/: amazon_transcriber.rs  config.rs  error.rs
api/src/translation_service/: config.rs  error.rs
api/src/websockets/: messages.rs  routes.rs  setup.rs
api/src/wiki_poll_service/: error.rs  polis_service.rs
api/src/workers/: documents.rs  knowledge-base-welcome.txt  knowledge_base_jobs.rs  knowledge_bases.rs  mod.rs  process_documents.rs  process_video_call_transcriptions.rs
service_traits/: Cargo.toml
service_traits/src/: lib.rs
(+357 files in other folders)
