[package]
name = "comhairle_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.1"
serde = {version="1.0.217", features=['derive']}
tokio = {version= "1.43.0", features=["full"]}
tower-http = {version="0.6.2", features=["trace","cors"]}
tracing = "0.1.41"
tracing-subscriber = {version ="0.3.19", features=["env-filter"]}
