[package]
name = "comhairle_api"
version = "0.1.0"
edition = "2021"
default-run = "comhairle_api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "comhairle"
path = "src/lib.rs"

[[bin]]
name = "comhairle_api"
path = "src/main.rs"

[[bin]]
name = "comhairle_data_loader"
path = "src/data_loader/main.rs"

[dependencies]
axum = { version = "0.8.3", features = ["ws"] }
async-trait = "0.1.83"
config = "0.15.8"
sea-query = {version = "0.32.3", features=["attr","postgres-array"] }
sea-query-binder = {version="0.7.0", features=[
    "sqlx-postgres",
    "with-chrono",
    "with-json",
    "with-rust_decimal",
    "with-bigdecimal",
    "postgres-array",
    "with-uuid",
    "with-time",
    "with-ipnetwork",
    "with-mac_address",
    "runtime-async-std-native-tls"
    ]}
rand = "0.8"
serde = { version = "1.0.218", features = ["derive"] }
# serde = {version="1.0.217", features=['derive']}
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "macros", "postgres", "chrono"] }
sqlx-postgres = { version = "0.8.3", features = ["chrono", "json", "time", "uuid"] }
thiserror = "2.0.11"
tokio = {version= "1.43.0", features=["full"]}
tower-http = {version="0.6.2", features=["trace","cors","auth"]}
tracing = "0.1.41"
tracing-subscriber = {version ="0.3.19", features=["env-filter"]}

hyper = { version = "1.0.0", features = ["full"] }
hyper-util = { version = "0.1.1", features = ["client-legacy"] }

jsonwebtoken = "^9.3.1"
openidconnect = "^4.0.0"
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.14.0", features = ["serde", "v4"] }
argon2 = "0.5.3"
rand_core = { version = "0.6", features = ["std"] }
tower = "0.5.2"
serde_json = "1.0.139"
http-body-util = "0.1.2"
headers = "0.4.0"
tower-cookies = "0.11.0"
partially = { version = "0.2.1", features = ["derive"] }
slugify = "0.1.0"
clap = { version = "4.5.32", features = ["derive"] }

#API documentation

schemars = { version = "0.8.10", features = ["uuid1", "chrono"] }
aide = { version = "0.14.0", features = ["redoc", "swagger", "scalar", "axum", "axum-tokio", "axum-json", "axum-query", "axum-matched-path", "macros", "axum-extra-cookie"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
aws-sdk-s3 = "1.82.0"
aws-config = "1.6.1"
reqwest = {version = "0.12.15", features=["cookies", "json"]}
axum-proxy = {version="0.4.1", features=["http2","https","axum"]}
regex = "1.11.1"
fancy-regex = "0.14.0"
lettre = "0.11.16"
minijinja = "2.10.2"
fluent-bundle = "0.15.3"
fluent = "0.16.1"
unic-langid = "0.9.6"
minijinja-embed = "2.10.2"
mockall = "0.13.1"
bon = "3.6.5"
tokio-tungstenite = "0.27.0"
futures-util = "0.3.31"
dashmap = "6.1.0"

# adaptors

heyform-sdk = {path="../adaptors/heyform-rust-sdk"}

# Macros
comhairle-macros = {path="../comhairle_macros"}
tracing-test = "0.2.5"
dotenvy = "0.15.7"
fake = { version = "4", features = ["chrono", "derive", "uuid"] }

[dev-dependencies]
fake = { version = "4", features = ["derive"] }

[build-dependencies]
minijinja-embed = "2.10.2"
