[package]
name = "service_traits"
version = "0.1.0"
edition = "2024"

[dependencies]
aide = { version = "0.14.0", features = ["redoc", "swagger", "scalar", "axum", "axum-tokio", "axum-json", "axum-query", "axum-matched-path", "macros", "axum-extra-cookie"] }
async-trait = "0.1.83"
mockall = "0.13.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
