[package]
name = "ragflow"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

service_traits = {path="../../service_traits"}

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5.2"
