[package]
name = "ragflow"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.11.0"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1.44"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5.2"
