[package]
name = "ragflow_client"
version = "0.0.1"
edition = "2021"
authors = ["crownshy"]
description = "A rust client for the RAGFlow HTTP API"
keywords = ["rag", "ragflow", "api", "client"]
categories = ["api-bindings", "web-programming"]

[dependencies]
bytes = "1.11.0"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1.44"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5.2"
